--- a/App/Spring3HibernateApp/src/com/ceok/db/config.properties
+++ b/App/Spring3HibernateApp/src/com/ceok/db/config.properties
@@ -1,4 +1,9 @@
-driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@10.121.21.160:1521:XE
-user=clrnadm
-password=clarent
+#driver=oracle.jdbc.driver.OracleDriver
+#url=jdbc:oracle:thin:@10.121.21.160:1521:XE
+#user=clrnadm
+#password=clarent
+
+driver=com.mysql.jdbc.Driver
+url=jdbc:mysql://localhost:3306/ceok
+user=root
+password=root
